--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/server/index.ts",
     "build": "tsc",
-    "start": "tsx src/server/index.ts",
+    "start": "node dist/server/index.js",
     "test": "jest --watch",
     "db:check": "tsx src/config/dbCheck.ts"
   },
@@ -17,7 +17,6 @@
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.1",
-    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "fastify": "^5.6.0",
     "fastify-jwt": "^4.1.3",
