--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.1",
+    "@types/streamifier": "^0.1.2",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.2",
     "fastify": "^5.6.0",
     "fastify-jwt": "^4.1.3",
+    "fastify-multipart": "^5.3.1",
     "fastify-plugin": "^5.0.1",
     "pg": "^8.16.3",
     "pino": "^9.11.0",
-    "pino-pretty": "^13.1.1"
+    "pino-pretty": "^13.1.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
