--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
+    "@types/nodemailer": "^7.0.2",
     "@types/pg": "^8.15.5",
     "jest": "^30.1.3",
     "ts-jest": "^29.4.4",
