--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fastify-jwt": "^4.1.3",
     "fastify-multipart": "^5.3.1",
     "fastify-plugin": "^5.0.1",
+    "nodemailer": "^7.0.7",
     "pg": "^8.16.3",
     "pino": "^9.11.0",
     "pino-pretty": "^13.1.1",
