--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.1",
+    "@fastify/multipart": "^9.3.0",
     "@fastify/oauth2": "^8.1.2",
     "@types/streamifier": "^0.1.2",
     "bcrypt": "^6.0.0",
@@ -27,6 +28,7 @@
     "fastify-multipart": "^5.3.1",
     "fastify-plugin": "^5.0.1",
     "nodemailer": "^7.0.7",
+    "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "pino": "^9.11.0",
     "pino-pretty": "^13.1.1",
@@ -39,6 +41,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "@types/nodemailer": "^7.0.2",
+    "@types/papaparse": "^5.5.2",
     "@types/pg": "^8.15.5",
     "jest": "^30.1.3",
     "ts-jest": "^29.4.4",
